# Space-Invaders-C-

./: .gitignore
SDL/SDLproject/: Bullet.cpp  Bullet.h  CMakeLists.txt  Collider.cpp  Collider.h  Dots.cpp  Dots.h  Enemy.h  Engine.cpp  Engine.h  Fruits.h  GameObject.cpp  GameObject.h  Invader.cpp  Invader.h  Main.cpp  Moveable.h  MovingObject.cpp  MovingObject.h  NoneMoveable.cpp  NoneMoveable.h  Player.cpp  Player.h  SDLproject.sln  SDLproject.vcxproj  SDLproject.vcxproj.filters  Session.cpp  Session.h  Source.cpp  Sprite.cpp  Sprite.h  StillObject.cpp  StillObject.h  Walls.h
SDL/SDLproject/Debug/: Bullet.nativecodeanalysis.sarif  Engine.nativecodeanalysis.sarif  Engine.nativecodeanalysis.xml  Invader.nativecodeanalysis.sarif  Player.nativecodeanalysis.sarif  SDLproject.ilk  Source.nativecodeanalysis.sarif  Sprite.nativecodeanalysis.sarif  vc.nativecodeanalysis.all.xml  vc142.idb
SDL/SDLproject/Debug/SDLproject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SDLproject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SDL/SDLproject/x64/Debug/: Bullet.nativecodeanalysis.sarif  Engine.nativecodeanalysis.sarif  Invader.nativecodeanalysis.sarif  Player.nativecodeanalysis.sarif  Source.nativecodeanalysis.sarif  Source.nativecodeanalysis.xml  Sprite.nativecodeanalysis.sarif  vc142.idb
SDL/SDLproject/x64/Debug/SDLproject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SDLproject.lastbuildstate
